feat(api): implement comprehensive CORS support and request logging
Introduce a multi-layered CORS strategy and a high-precedence request
logging filter to improve API observability and cross-origin
accessibility.

- Add `CorsConfig` and `RequestLoggingFilter` for centralized
  configuration and request auditing.
- Apply `@CrossOrigin` annotations across all controllers to ensure
  consistent access control.
- Update `SecurityConfig` to permit access to new health endpoints.
- Add `cors-test.html` for manual verification of cross-origin
  requests.
- Implement additional health check endpoints for improved monitoring.